--- a/tinderbox.1
+++ b/tinderbox.1
@@ -25,7 +25,7 @@
 .\"
 .\" $FreeBSD$
 .\"
-.Dd February 5, 2012
+.Dd March 29, 2013
 .Dt TINDERBOX 1
 .Os
 .Sh NAME
@@ -53,21 +53,26 @@ The default value is whatever the host system's
 .Xr uname 1
 reports.
 .It Fl -branch Ns = Ns Ar BRANCH
-The branch to specify to
+The branch to check out from
+.Xr svn 1 ,
 .Xr cvs 1
 or
 .Xr cvsup 1
 when updating the source tree.
-Ignored when using
-.Xr svn 1 .
-The default is to use
-.Fl A
-instead, to get the head.
-Specifying
-.Va HEAD
-as the argument to
-.Fl -branch
-is equivalent to leaving it unspecified.
+The default is to check out HEAD.
+When using
+.Xr svn 1 ,
+.Xr cvs 1 Ns -style
+branch names are translated to
+.Xr svn 1
+paths; for instance,
+.Dv RELENG_9
+becomes
+.Pa stable/9
+and
+.Dv RELENG_9_1
+becomes
+.Pa releng/9.1 .
 .It Fl -cvsup Ns = Ns Ar NAME
 The name of the
 .Xr cvsup 1
