Clarify some definitions of laundry pages.

--- a/usr.bin/top/top.local.1
+++ b/usr.bin/top/top.local.1
@@ -26,7 +26,7 @@ number of bytes active
 number of clean bytes inactive
 .TP
 .B Laundry:
-number of dirty bytes inactive
+number of dirty bytes queued for laundering
 .TP
 .B Wired:
 number of bytes wired down, including BIO-level cached file data pages
