--- a/usr.bin/systat/systat.1
+++ b/usr.bin/systat/systat.1
@@ -411,7 +411,7 @@ as amounts of memory in kilobytes,
 pages wired down (`wire'),
 active pages (`act'),
 inactive pages (`inact'),
-pages in the laundry queue (`laund'),
+dirty pages queued for laundering (`laund'),
 and
 free pages (`free').
 Note that the values displayed are the current transient ones;
